# SAHR_bifurcation

./: README  README.md
MATLAB/: README.md  datatest12.mat  datatest13.mat  datatest16.mat  datatest17.mat  datatest2.mat  datatest4.mat  datatest5.mat  datatest7.mat  demo.m  demo.mlx  farshadDemo.m  getData.fig  getData.m  movieNonlinear.m  nonlinear_limitcycles.m
MATLAB/GMR-dynamics-v2.0/: plotGMM.m
MATLAB/GMR-dynamics-v2.0/potential/: hyper2cartvelocities.m  motion_around_star.m  motion_potential_energy.m  plotDynamics.fig
MATLAB/control_parameters/: plotDynamics.fig  plotDynamics.m
MATLAB/data/: README.md  datatest1.mat  datatest10.mat  datatest11.mat  datatest14.mat  datatest15.mat  datatest3.mat  datatest6.mat  datatest8.mat  datatest9.mat  drawData.fig  drawData.m  getNoiseRange.m  loadData.m  plotData.m  prepareData.m  saveData.m
MATLAB/data/data_LfD/: eval1.mat  eval2.mat
MATLAB/data/data_icub/: log1.csv  log_DS.csv  log_data.csv
MATLAB/data/data_kin/: data_ilaria_1.csv  data_ilaria_2.csv  data_ilaria_3.csv  data_ilaria_5.csv  data_ilaria_6.csv  data_ilaria_7.csv  evaluation.mat  parametersDyn5.cfg  params5.mat
MATLAB/data/data_polishing/: evalpol.mat  polish1.csv
MATLAB/data/data_simulation/: README.md
MATLAB/data/data_toy/: circle_rho0_M05_R2.mat  circle_rho0_M3_Rm1_th0_th-02_th0.mat  circle_rho0_M3_Rm1_th0_th0_th0.mat  circle_rho2_M1_Rm2_th0_th0_th0.mat  circle_rho2_M3_Rm1_th0_th-02_th0.mat  circle_rho2_M3_Rm1_th0_th0_th0.mat  circle_rho2_M5_R3.mat  circle_rho3_M2_R1_th0_th0_th0.mat  circle_rho3_M2_R1_th0_th1_th0.mat  circle_rho4_M2_Rm1.mat
MATLAB/drtoolbox/: Readme.txt  compute_mapping.m  drgui.m  generate_data.m  out_of_sample.m  prewhiten.m  reconstruct_data.m  test_toolbox.m
MATLAB/drtoolbox/gui/: no_history.m
MATLAB/drtoolbox/techniques/: cca.m  charting.m  checkgrad.m  (+32 more)
MATLAB/evaluation/: RMSErr.m  cosSim.m
MATLAB/figs/: tr1.eps  tr2.eps  tr3.eps  tr4.eps  tr5.eps  tr6.eps  tr7.eps  tr8.eps  tr9.eps
MATLAB/optimization/: dimreduce.m  optimizePars.m
MATLAB/toROS/: saveToCfg.m
MATLAB/transformations/: cart2hyper.m  cart2sphvelocities.m  hyper2cart.m  sph2cartvelocities.m
cpp/: README.md  parametersDyn.cfg
cpp/bifurcation/: CMakeLists.txt  README.md  dependencies.rosinstall  dependencies.rosinstall~  package.xml
cpp/icub/: README.md
cpp/icub/IKD/: CMakeLists.txt  README.md  example.cpp
cpp/icub/IKD/IKCG_cvxgen/: IKCG_description.cvxgen  IKCG_ldl.c  IKCG_matrix_support.c  IKCG_solver.c  IKCG_solver.h  IKCG_testsolver.c  IKCG_util.c
cpp/icub/IKD/icub_id_cvxgen/: icub_id_description.cvxgen  icub_id_matrix_support.c  icub_id_solver.c  icub_id_solver.h  icub_id_testsolver.c  icub_id_util.c
cpp/icub/IKD/include/: Basics.h  Contacts.h  ID.h  IK.h  Model.h
cpp/icub/IKD/sdfastcpp/include/: convert.m  defs.txt  defs2.txt  icub_air.h
cpp/icub/IKD/sdfastcpp/src/: icub_air.cpp
cpp/icub/IKD/src/: Basics.cpp  Contacts.cpp  ID.cpp  IK.cpp  Model.cpp
cpp/icub/controllers/single_leg_bif/: CMakeLists.txt  main.cpp  test.cpp
cpp/icub/controllers/single_leg_bif/build_old/: CMakeCache.txt  Makefile
cpp/icub/controllers/single_leg_bif/lib/: bifurcation.cpp  bifurcation.h  parameters.cpp  parameters.h  transformations.cpp
cpp/icub/real_robot/IKD/: CMakeLists.txt  Problem.spc  README.md  main.cpp
cpp/icub/real_robot/IKD/IKCG_cvxgen/: IKCG_description.cvxgen  IKCG_ldl.c  IKCG_matrix_support.c  IKCG_solver.c  IKCG_solver.h  IKCG_testsolver.c  IKCG_util.c
cpp/icub/real_robot/IKD/edit/: edit.cbp  edit.layout
cpp/icub/real_robot/IKD/icub_id_cvxgen/: icub_id_ldl.c
cpp/icub/real_robot/IKD/include/: Basics.h  Contacts.h  ID.h  IK.h
cpp/icub/real_robot/IKD/snopt/include/: snopt.h  snoptProblem.hpp  snoptStructure.hpp
cpp/icub/real_robot/IKD/snopt/lib/: libsnopt7.la  libsnopt7.so.0  libsnopt7_c.la  libsnopt7_c.so.0.0.0  libsnopt7_cpp.la  libsnopt7_cpp.so.0.0.0  libsqopt7.la  libsqopt7.so.0
cpp/icub/real_robot/IKD/src/: Basics.cpp  Contacts.cpp  ID.cpp  IK.cpp  IK.cppsnopt  IK_snopt.cppx  Model.cpp
paper/: README.md
(+195 files in other folders)
